using bootstrap's javaScript to navigate. bug.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,94 @@
 </head>
 
 <body>
-    <div class="container pt-4 pl-3 pr-4">
-        <div class="card bg-secondary text-change pt-4 pb-4">
-            <div class="card-title text-center">
-                <h2 class="fancy-font">PlaybillStore</h2>
-            </div>
-            <div class="card-text text-change">
-                <p class="text-center fancy-font"><i>The PlaybillStore is the number
-                        one place for high
-                        quality
-                        playbills from the most beloved shows on Broadway for a low price! Thanks so much
-                        for
-                        visiting
-                        our site! Be sure to rent a playbill and come back to return it later!</i></p>
+    <div class="container pt-4">
+        <div class="card bg-secondary">
+            <div class="card-header ">
+                <div class="row">
+                    <div class="col-3 center-pills text-center ">
+                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            <a class="nav-link active bg-light text-color" id="v-pills-home-tab" data-toggle="pill"
+                                href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                            <a class="nav-link bg-light text-color" id="v-pills-rent-tab" data-toggle="pill" href="#v-pills-rent"
+                                role="tab" aria-controls="v-pills-rent" aria-selected="false">Rent</a>
+                            <a class="nav-link bg-light text-color" id="v-pills-cart-tab" data-toggle="pill" href="#v-pills-cart"
+                                role="tab" aria-controls="v-pills-cart" aria-selected="false"><i class="fas fa-cart-arrow-down"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-9">
+                        <div class="tab-content" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                                <div class="card bg-secondary text-change pt-4 pb-4">
+                                    <div class="card-title text-center">
+                                        <h2 class="fancy-font">PlaybillStore</h2>
+                                    </div>
+                                    <div class="card-text text-change">
+                                        <p class="text-center fancy-font"><i>The PlaybillStore is the number
+                                                one place for high
+                                                quality
+                                                playbills from the most beloved shows on Broadway for a low price!
+                                                Thanks
+                                                so
+                                                much
+                                                for
+                                                visiting
+                                                our site! Be sure to rent a playbill and come back for another!</i></p>
+                                    </div>
+                                    <hr class="line-divider col-9">
+                                    <div class="container pt-3">
+                                        <div class="row">
+                                            <!-- <div class="col-lg-6"> -->
+                                            <div class="card bg-secondary">
+                                                <div class="card-body">
+                                                    <h2 class="card-title text-center text-change fancy-font">We
+                                                        think
+                                                        you would like..</h2>
+                                                    <hr class="border-white">
+                                                    <div class="playbill-info d-flex">
+                                                        <img src="images/wicked.JPG" width=895>
+                                                        <p class="fancy-font text-change pl-3">
+                                                            Wicked, the Broadway sensation, looks at what happened
+                                                            in
+                                                            the Land of Oz…but from a different angle. Long before
+                                                            Dorothy arrives, there is another girl, born with
+                                                            emerald-green skin—smart, fiery, misunderstood, and
+                                                            possessing an extraordinary talent. When she meets a
+                                                            bubbly
+                                                            blonde who is exceptionally popular, their initial
+                                                            rivalry
+                                                            turns into the unlikeliest of friendships…until the
+                                                            world
+                                                            decides to call one “good,” and the other one “wicked.”
+                                                            This infamous playbill is signed by the
+                                                            current cast of Wicked on Broadway. In honor of Wicked
+                                                            celebrating 15 years on Broadway, we have this limited
+                                                            edition
+                                                            Wicked playbill for a very low price! Get it today!
+                                                        </p>
+                                                    </div>
+                                                    <div class="price pt-3">
+                                                        <p class="fancy-font text-change text-center font-weight-bold">
+                                                            Price: $15.00</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-rent" role="tabpanel" aria-labelledby="v-pills-rent-tab">...</div>
+                    <div class="tab-pane fade" id="v-pills-cart" role="tabpanel" aria-labelledby="v-pills-cart-tab">...</div>
+                </div>
             </div>
         </div>
     </div>
 
-
-
-
+    </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -42,7 +110,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="./javaScript.js"></script>
+
 
 </body>
 
