trying to get handlebars template to generate a book from the home pill

--- a/index.html
+++ b/index.html
@@ -193,6 +193,27 @@
     </div>
     </div>
 
+    <!-- <script id="randomPlaybillTemplate" type="text/x-handlebars-template">
+        <div class="card-body">
+                <h2 class="card-title text-center text-change fancy-font">We
+                    think
+                    you would like..</h2>
+                <hr class="border-white">
+                <div class="playbill-info d-flex">
+                    <img class="pr-3" src="{{imgSrc}}" width=1095>
+                    <p class="fancy-font text-change pl-3"></p>
+                </div>
+                <div class="price pt-3 text-center">
+                    <p class="fancy-font text-change font-weight-bold">
+                        Price: $15.00</p>
+                    <a class="btn btn-success btn-lg btn-block text-center fancy-font"
+                        id="link-to-rent" href="#v-pills-rent" data-toggle="tab">Rent
+                        Now</a>
+                </div>
+            </div>
+    </script> -->
+
+
     <script id="playbillTemplate" type="text/x-handlebars-template">
     <div class="container pt-3">
         <div class="card bg-secondary">
